--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@ APP_NAME=ALBA
 
 AUTH_ALGO=
 
-DB_HOST=
-DB_NAME=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=mysql
+DB_NAME=alba
+DB_PORT=3306
+DB_USERNAME=alba
+DB_PASSWORD=password
 
 FILESYSTEM_DRIVER=local
